--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "The backend api part for agar online store application",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./src/server.ts",
+    "watch": "nodemon ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abenezer Tadesse",
